--- a/index.html
+++ b/index.html
@@ -4,8 +4,133 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    
+    <link rel="stylesheet" href="assets/styles.css">
+    <header>
+        <p>Дәмді</p>
+        <nav>
+            <ul class="nav-list">
+                <li><a href="">Басты бет</a></li>
+                <li><a href="">Біз туралы</a></li>
+                <li><a href="">Қызметтер</a></li>
+                <li><a href="">Бізбен байланыс</a></li>
+                <li><a href="">Мәзір</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="banner">
+        <div class="banner-texts">
+            <h1>Дәмді тағам</h1>
+            <h3>Аптаның үздік тамағын көріңіз</h3>
+            <button>Мәзірді көру</button>
+        </div>
+
+        <img src="assets/img/bannerImage.png" alt="">
+    </section>
+
+    <section class="about-us">
+        <img src="assets/img/kazakhCuisine.jpeg" alt="">
+
+        <div class="about-us-texts">
+            <p>Біз туралы</p>
+            <h1>Дәмді тағам</h1>
+            <h3>Аптаның үздік тамағын көріңіз</h3>
+            <button>Тарйхты зертте</button>
+        </div>
+    </section>
+
+    <section class="offer">
+        <div class="offer-title">
+            <p>Ұсыныс</p>
+            <h3>Біздің керемет қызметтер</h3>
+        </div>
+        <div class="offers">
+            <div class="offer-card">
+                <img src="assets/img/free-icon-plate-1232728.png" alt="" width="30" height="50">
+                <p><b>Тамаша тағам</b></p>
+                <p>Біз өз клиенттерімізге көптеген жылдар бойы қаладағы ең жақсы және дәмді тағамдармен тамаша сапалы қызметтерді ұсынамыз</p>
+            </div>
+
+            <div class="offer-card">
+                <img src="assets/img/free-icon-fast-food-1753106.png" alt="" width="30" height="50">
+                <p><b>Фастфуд</b></p>
+                <p>Біз өз клиенттерімізге көптеген жылдар бойы қаладағы ең жақсы және дәмді тағамдармен тамаша сапалы қызметтерді ұсынамыз</p>
+            </div>
+
+            <div class="offer-card">
+                <img src="assets/img/icons8-доставка-50.png" alt="" width="30" height="50">
+                <p><b>Жеткізу</b></p>
+                <p>Біз өз клиенттерімізге көптеген жылдар бойы қаладағы ең жақсы және дәмді тағамдармен тамаша сапалы қызметтерді ұсынамыз</p>
+            </div>
+        </div>
+            <div class = "tamak">
+  <h5> Арнайы </h5>
+  <h2> Апта мәзірі </h2>
+</div>
+
+<!-- <div class = "tamak2">
+  <b> Апта мәзірі <b>
+</div> -->
+
+<div class = "Zakaz">
+
+ <div class = "Besparmak">
+   <img src="assets/img/bannerImage.png" height= "100px" width="100px">
+   <h3>Бешбармақ</h3>
+   <h5>Дәмді тағам</h5>
+   <p>10.000₸</p>
+   </div>
+
+  <div class = "Mantas">
+    <img src="assets/img/sal6.png" height= "100px" width="100px">
+    <h3>Манты</h3>
+    <h5>Дәмді тағам</h5>
+    <p>10.000₸</p>
+    </div>
+
+    <div class = "Pilaf">
+      <img src="assets/img/big-plov.png" height= "100px" width="100px">
+      <h3>Плов</h3>
+      <h5>Дәмді тағам</h5>
+      <p>10.000₸</p>
+      </div>
+    </section>
+    <div class="link">
+        <h5>Сөйлесейік</h5>
+        <h2>Бізбен байланыс</h2>
+    </div>
+
+    <!-- <div class = "link2">
+  <b> Бізбен байланыс <b>
+</div> -->
+
+    <p>Егер сіз біздің мейрамханада үстелді брондағыңыз келсе бізбен хабарласыңыз біз тәулік бойы сөйлесу қызметімізбен сізге тез қатысамыз</p>
+
+    <button>Қәзір бізге хабарласыңыз</button>
+
+    <div>
+        <p>Дәмді тағам</p>
+        <h5>Мейрамхана</h5>
+        <p></p>
+        <p></p>
+        <h3>Қызметтер</h3>
+        <h5>Жеткізу</h5>
+        <h5>Прайс</h5>
+        <h5>Фастфуд</h5>
+        <h5>Бронь</h5>
+        <p></p>
+        <p></p>
+        <h3>Ақпарат</h3>
+        <p>Іс-шара</p>
+        <p>Бізбен байланыс</p>
+        <p>Құпиялық саясаты</p>
+        <p>Қызмет көрсету шарттары</p>
+        <p></p>
+        <p></p>
+        <h3>Мекен-жай</h3>
+        <p>Алматы, Қаласы</p>
+        <p>Мәуленов к.92</p>
+        <p>999-888-777</p>
+        <p>damditogam@gmail.com</p>
 </body>
 </html>
